--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
         exclude module: 'opus-java'
     }
     compile 'com.vdurmont:emoji-java:4.0.0'
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 spongestart {
